@@ -27,8 +27,16 @@
             <artifactId>json</artifactId>
             <version>20231013</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>12.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-fontawesome5-pack</artifactId>
+            <version>12.3.0</version>
+        </dependency>
         <dependency>
             <groupId>net.datafaker</groupId>
             <artifactId>datafaker</artifactId>
@@ -38,7 +46,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>21.0.1</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -120,7 +133,12 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-                <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar</argLine>
+                <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/5.14.2/mockito-core-5.14.2.jar
+                    --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    --add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED
+                    --add-opens javafx.base/com.sun.javafx.event=ALL-UNNAMED
+                </argLine>
+
             </configuration>
 
     </plugin>
